# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.20

  - WL#12248, DevAPI: Connection compression.

  - Fix for Bug#30636056, ResultSetUtil.resultSetToMap() can be unsafe to use.

  - Fix for Bug#97757 (30584907), NULLPOINTEREXCEPTION WITH CACHERESULTSETMETADATA=TRUE AND EXECUTEQUERY OF "SET".

Version 8.0.19

  - WL#13346, Support for mult-host and failover.

  - Fix for Bug#97413 (30477722), DATABASEMETADATA IS BROKEN AFTER SERVER WL#13528.

  - WL#13367, DNS SRV support.

  - WL#12736, DevAPI: Specify TLS ciphers to be used by a client or session.

  - Fix for regression tests broken by Bug#97079 fix.

  - Fix for Bug#96383 (30119545) RS.GETTIMESTAMP() HAS DIFFERENT RESULTS FOR TIME FIELDS WITH USECURSORFETCH=TRUE.

  - Fix for Bug#96059 (29999318), ERROR STREAMING MULTI RESULTSETS WITH MYSQL-CONNECTOR-JAVA 8.0.X.

  - Fix for Bug#96442 (30151808), INCORRECT DATE ERROR WHEN CALLING GETMETADATA ON PREPARED STATEMENT.

Version 8.0.18

  - WL#13347, Connectors should handle expired password sandbox without SET operations.

  - Fix for Bug#84098 (25223123), endless loop in LoadBalancedAutoCommitInterceptor.

  - Fix for Bug#23721537, MULTI-SELECT WITH EXECUTEASYNC() GIVES IMPROPER ERROR.

  - Fix for Bug#95741 (29898567), METADATA QUERY USES UPPER() AROUND NUMERIC EXPRESSION.

  - Fix for Bug#20913289, PSTMT.EXECUTEUPDATE() FAILS WHEN SQL MODE IS NO_BACKSLASH_ESCAPES.

  - Fix for Bug#80441 (22850444), SYNTAX ERROR ON RESULTSET.UPDATEROW() WITH SQL_MODE NO_BACKSLASH_ESCAPES.

Version 8.0.17

  - WL#13210, Generate Javadocs via ant.

  - WL#12247, DevAPI: indexing array fields.

  - WL#12726, DevAPI: Add overlaps and not_overlaps as operator.

  - Fix for Bug#95503 (29821029), Operator IN not mapping consistently to the right X Plugin operation.

  - WL#12942, Update README.md and add new CONTRIBUTING.md.

  - WL#13125, Support fully qualified hostnames longer than 60 characters.
